--- a/index.html
+++ b/index.html
@@ -216,23 +216,10 @@
                 </div>
             </div>
 
-            <!-- login / create account box -->
+            <!-- texbox for letting the user writing some stuffs -->
             <div class="grid-stack-item" data-gs-x="7" data-gs-y="0" data-gs-width="2" data-gs-height="4">
                 <div class="grid-stack-item-content">
-                    <h3>Sign-In</h3>
-
-                    <div id="connexion_box" style="display:block;">
-                        <input id="mail_input" type="text" placeholder="email@domain.com">
-                        <input id="pass_input" type="password" placeholder="password">
-
-                        <button onclick="user_create_account();">Create Account</button>
-                        <button onclick="user_sign_in();">Sign In</button>
-                    </div>
-
-                    <div id="deconnexion_box" style="display:none;">
-                        <button onclick="save_and_log_out();">Save & Log Out</button></br>
-                        <button onclick="user_log_out();">Just Log Out</button>
-                    </div>
+                    <textarea class="form-control" style="width: 100%; height: 100%" placeholder="Personnal notes..."></textarea>
                 </div>
             </div>
 
