update et delete fonctionnent pour la map- reste ajout et la liste a faire

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           </div>
 
           <div class="modal-footer">
-            <button type="button" class="btn btn-default"  data-dismiss="modal">MAKE IT !</button>
+            <button type="button" onclick="addMarker()" class="btn btn-default"  data-dismiss="modal">MAKE IT !</button>
           </div>
         </div>
 
