correction du double marker à l'ajout + sauvegarde semble fonctionner + ajout de location mais à changer

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <!-- Modal content-->
         <div class="modal-content">
           <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <button type="button" onclick="addMarker()" class="close" data-dismiss="modal">&times;</button>
             <h4 class="modal-title">Add a new Marker...</h4>
           </div>
           <div class="modal-body">
