Modification de Location pour l'ajout de marker

--- a/index.html
+++ b/index.html
@@ -148,6 +148,11 @@
                 </tr>
 
                 <tr>
+                    <td>Location</td>
+                    <td><input id="loc" type="text" class="form-control" placeholder="location..." required></td>
+                </tr>
+
+                <tr>
                     <td>#KILLED</td>
                     <td><input id="killed" type="text" class="form-control" placeholder="nb killed..." required></td>
                 </tr>
