--- a/index.html
+++ b/index.html
@@ -324,6 +324,8 @@
         </div>
 
         <div id="div4">
+            <div id="chartTime" style="width: 100%; height: 100%;"></div>
+
         </div>
     </div>
 
@@ -342,7 +344,7 @@
     $("#div1").css("position", "absolute");
     $("#div2").css("position", "absolute");
     $("#div3").css("position", "absolute");
-    $("#div3").css("position", "absolute");
+    $("#div4").css("position", "absolute");
     $("#piechart").css("position", "absolute");
     $("#field3").css("position", "absolute");
 
